--- a/tic-tac-toe/src/App.css
+++ b/tic-tac-toe/src/App.css
@@ -13,15 +13,19 @@
 }
 
 .status {
+  text-transform: uppercase;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 36px;
   margin-bottom: 18px;
   text-align: center;
+  color: rgb(49, 108, 116);
 }
 
 .reset>button {
+  color: rgb(49, 108, 116);
+
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-weight: bolder;
+  font-weight: 100;
   letter-spacing: 2px;
   text-transform: uppercase;
   margin-top: 18px;
@@ -29,7 +33,7 @@
   background-color: white;
   padding: 10px;
 
-  border: 5px solid rgb(49, 108, 116);
+  border: 1px solid rgb(49, 108, 116);
 }
 
 .board {
